# Advanced-Analytics---Project-2025

./: README.md
Assignment 1/: ASSIGNMENT1_FINAL.ipynb  automl_submission_3.csv  automl_submission_3.ipynb  automl_submission_4.py  fabri_preprocessing+model.ipynb  pyproject.toml  requirements.txt  xgboost_submission_3.csv  xgboost_submission_3.ipynb
Assignment 2/: 3split.ipynb  assignment2_pytorch.ipynb  image_preprocess.ipynb  trial_1.ipynb  trial_2.ipynb
Assignment 3/: Assignment3.ipynb  Assignment3_final_version.ipynb  Visualizations_assignment_3.ipynb  data-collection_arxivAPI.py
Assignment 4/: improved_recommender_2.ipynb
Assignment 4/data_processing/: construct_bipartite_graph.py  construct_network.py  extract_largest_component_recommender.py  largest_component_analysis.py
Assignment 4/scripts/: analyze_graph_attributes.py  categorize_games.py  construct_combined_graph.py  convert_to_gephi.py  extract_subgraphs.py  optimised recommender.py  sentiment_integration_summary.py  show_uncategorized_apps.py  steam_recommender_node2vec_gnn.py  verify_app_type_binarization.py
Assignment 4/sentiment_analysis/: colab_training_template.py  export_reviews_for_training.py  import_scores_to_graph.py  review_scoring.ipynb  score_reviews.py
Assignment 4/tests/: basic_test.py  check_attributes.py  connectivity_test.py  lightweight_test.py  simple_test.py  test_data_load.py  test_data_loading.py  test_improvements.py  test_lcc_extraction.py
