[project]
name = "automl-project"
version = "0.1.0"
description = "AutoML project for house price prediction"
requires-python = ">=3.9,<3.12"

dependencies = [
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.0",
    "scipy==1.11.3",
    "lightgbm==4.1.0",
    "xgboost==2.0.2",
    "catboost==1.2.2",
    "optuna==3.4.0",
    "optuna-integration==3.4.0",
    "matplotlib==3.8.0",
    "seaborn==0.13.0",
    "shap==0.43.0",
    "flaml[catboost]==2.1.1",
    "ipykernel==6.25.2",
    "lime==0.2.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automl"]

[tool.hatch.metadata]
allow-direct-references = true 